# alienswarm-cmake

./: .gitignore  README.md  hardclean.sh
src/: CMakeLists.txt
src/game/client/: CMakeLists.txt  cdll_util.h
src/game/missionchooser/: CMakeLists.txt
src/game/server/: swarm_sdk_server.vcproj
src/public/: filesystem_init.cpp
src/public/avi/: iavi.h  ibik.h
src/public/datacache/: iprecachesystem.h  iresourceaccesscontrol.h
src/public/filesystem/: IQueuedLoader.h  IXboxInstaller.h
src/public/maya/: IMayaVGui.h
src/public/particles/: particles.h
src/public/tier0/: logging.h
src/public/vstdlib/: iprocessutils.h
